Varios ajustes ocultar

--- a/candidatos/templates/dashboard.html
+++ b/candidatos/templates/dashboard.html
@@ -123,7 +123,7 @@
                             <path d="M10 6a1 1 0 110-2 1 1 0 010 2zm0 4a1 1 0 110-2 1 1 0 010 2zm0 4a1 1 0 110-2 1 1 0 010 2z" />
                         </svg>
                     </button>
-                    <div id="dropdown-menu" class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-lg bg-white shadow-xl ring-1 ring-black ring-opacity-5" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
+                    <div id="dropdown-menu" class="absolute right-0 z-10 mt-2 w-56 hidden origin-top-right rounded-lg bg-white shadow-xl ring-1 ring-black ring-opacity-5" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
                         <div class="py-1" role="none">
 
                             {% with filter_date=request.GET.fecha_inicio %}
