--- a/candidatos/templates/kanban_column.html
+++ b/candidatos/templates/kanban_column.html
@@ -246,7 +246,7 @@
                     {% if status_key == 'REGISTRADO' %}
                         <button 
                             onclick="event.stopPropagation(); openConvocarModal('{{ candidato.DNI }}', '{{ candidato.nombres_completos }}')"
-                            class="text-[11px] font-bold px-2 py-1 bg-red-700 text-white rounded-md hover:bg-red-800 transition duration-150 shadow-md shadow-red-200/50"
+                            class="text-[11px] font-bold px-2 hidden py-1 bg-red-700 text-white rounded-md hover:bg-red-800 transition duration-150 shadow-md shadow-red-200/50"
                             title="Iniciar Proceso de Convocatoria">
                             📞 Convocar
                         </button>
