archivos importantes básicos de configuración

--- a/candidatos/templates/kanban_column.html
+++ b/candidatos/templates/kanban_column.html
@@ -70,7 +70,7 @@
             
             <button 
                 onclick="event.stopPropagation(); openHistoryModal('{{ candidato.DNI }}', '{{ candidato.nombres_completos }}')"
-                class="absolute top-1.5 right-1.5 p-1 text-red-500 hover:text-red-700 rounded-lg hover:bg-red-50 transition duration-150 z-10 opacity-0 group-hover:opacity-100"
+                class="absolute top-1.5 right-1.5 p-1 hidden text-red-500 hover:text-red-700 rounded-lg hover:bg-red-50 transition duration-150 z-10 opacity-0 group-hover:opacity-100"
                 title="Ver Historial del Candidato">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
             </button>
