--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,3 @@
 <footer class="text-center text-xs text-gray-400 py-3 border-t border-gray-100 mt-auto px-4">
-    Copyright © 2025 + 34, Inc. Todos los derechos reservados.
+    Copyright © 2025 + 34, Todos los derechos reservados.
 </footer>
